syntax = "proto3";

package order;

service OrderService {
  rpc FromCart (FromCartRequest) returns (FromCartResponse);
  rpc BuyNow (BuyNowRequest) returns (BuyNowResponse);
}

message FromCartRequest {
  string userId = 1;
  repeated ProductItem items = 2;
}

message ProductItem {
  string productId = 1;
  string skuNo = 2;
  int32 quantity = 3;
}

message FromCartResponse {
  bool success = 1;
  string message = 2;
}   